--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,13 @@
             <div class="search-element">
                 <h3>Search Movie:</h3>
                 <input type="text" class="form-control" placeholder="Search Movie Title ..." id="movie-search-box" onkeyup="findMovies()" onclick="findMovies()">
-
                 <div class="search-list" id="search-list">
                     <!-- list here -->
                 </div>
+            </div>
+            <div class="favorite-movies-container">
+                <h4><span>Favorite Movies:</span></h4>
+                <ul class="favorite-movies-list" id="favorite-movies-list"></ul>
             </div>
         </div>
         <!-- end of search container -->
